--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Il mio Portfolio</title>
+  <title>Portfolio - Elia Giordano</title>
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-mQb4x9t+X3zL+e1+8F53lXx8XK5E+OQePZ0p5y5x5hy0t6riV+Yl4VQ1o7kTr4+9gZW1x5NyzBHnA3uP3w1C2Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- style.css -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Background particles -->
+  <div id="particles-js"></div>
+
+  <!-- Menu di navigazione -->
   <nav>
     <ul>
       <li><a href="#progetti">Progetti</a></li>
@@ -17,44 +25,69 @@
     </ul>
   </nav>
 
+  <!-- Intestazione -->
   <header>
-    <h1>Ciao, sono Elia Giordano</h1>
+    <h1><i class="fas fa-user-astronaut icon-header"></i> Ciao, sono Elia Giordano</h1>
     <p>Visual Designer & 3D Artist</p>
   </header>
 
+  <!-- Sezione Progetti -->
   <section id="progetti">
-    <h2>I miei progetti</h2>
+    <h2><i class="fas fa-layer-group icon-section"></i> I miei progetti</h2>
 
     <div class="progetto">
-      <h3>Logo Design</h3>
-      <img src="logo.jpg" alt="Logo esempio" width="200">
+      <h3><i class="fas fa-paint-brush icon"></i> Logo Design</h3>
+      <img src="logo.jpg" alt="Logo esempio">
       <p>Ho creato questo logo per un brand di moda contemporaneo.</p>
     </div>
 
     <div class="progetto">
-      <h3>Modello 3D</h3>
-      <img src="3d.jpg" alt="3D esempio" width="200">
+      <h3><i class="fas fa-cube icon"></i> Modello 3D</h3>
+      <img src="3d.jpg" alt="3D esempio">
       <p>Un modello 3D realizzato con Blender per un videogioco indie.</p>
     </div>
   </section>
 
+  <!-- Sezione Chi Sono -->
   <section id="chi-sono">
-    <h2>Chi sono</h2>
+    <h2><i class="fas fa-user icon-section"></i> Chi sono</h2>
     <p>Mi chiamo Elia Giordano e sono un Visual Designer con un forte interesse per la modellazione e l'animazione 3D. Uso strumenti come Adobe XD, Blender, Figma e altri per creare esperienze visive uniche.</p>
   </section>
 
+  <!-- Sezione Contatti -->
   <section id="contatti">
-    <h2>Contattami</h2>
+    <h2><i class="fas fa-envelope icon-section"></i> Contattami</h2>
     <form action="https://formspree.io/f/tuoid" method="POST">
       <input type="email" name="email" placeholder="La tua email" required>
       <textarea name="message" placeholder="Il tuo messaggio" required></textarea>
-      <button type="submit">Invia</button>
+      <button type="submit"><i class="fas fa-paper-plane"></i> Invia</button>
     </form>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>Contattami: eliagiordano@email.com</p>
+    <p>© 2025 Elia Giordano</p>
   </footer>
 
+  <!-- tsParticles Script -->
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.37.0/tsparticles.min.js"></script>
+  <script>
+    tsParticles.load("particles-js", {
+      particles: {
+        number: { value: 80, density: { enable: true, value_area: 800 } },
+        shape: { type: "circle" },
+        color: { value: "#fff" },
+        opacity: { value: 0.5, random: true },
+        size: { value: 2, random: true },
+        move: { enable: true, speed: 1, out_mode: "out" }
+      },
+      interactivity: {
+        events: {
+          onhover: { enable: true, mode: "repulse" },
+          onclick: { enable: true, mode: "push" }
+        }
+      }
+    });
+  </script>
 </body>
 </html>
