--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     auto-rotate
     background-color="#00000000"
     interaction-prompt="none"
-    disable-zoom>
+    disable-zoom
+    alt="Modello 3D della mano aliena"
+    style="width: 100%; height: 100vh;">
+    <p class="error">Errore nel caricamento del modello 3D. Assicurati che il file "mano_aliena.glb" sia nella cartella giusta.</p>
   </model-viewer>
 
 </body>
