--- a/index.html
+++ b/index.html
@@ -1,36 +1,103 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio di KanekiGhoul‑dev</title>
-  <!-- Font tecnico -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
-  <!-- CSS -->
-  <link rel="stylesheet" href="stile.css" />
-  <!-- model-viewer -->
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+  <!-- Font Orbitron -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+
+  <style>
+    /* Generale */
+    body, html {
+      margin: 0; padding: 0;
+      width: 100%; height: 100%;
+      overflow: hidden;
+      font-family: 'Orbitron', sans-serif;
+      background: url('sfondoportfolio.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #00aaff;
+    }
+    /* Contenitore per eventuale testo sopra il 3D */
+    .intro {
+      position: absolute; top: 10%; left: 50%;
+      transform: translateX(-50%);
+      text-align: center; z-index: 1;
+    }
+    .intro h1 { margin:0; font-size:2.5rem; text-shadow:0 0 10px #000; }
+    .intro p { margin:0.5rem 0 0; color:#a0c4ff; }
+
+    /* Il canvas di three.js occuperà tutto il viewport */
+    #canvas-container {
+      width:100%; height:100%;
+      position: absolute; top:0; left:0;
+      z-index: 0;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Intro testuale -->
   <div class="intro">
     <h1>Benvenuto nel mio universo</h1>
     <p>Presto qui troverai i miei progetti</p>
   </div>
 
-  <!-- Visualizzatore 3D della mano aliena -->
-  <model-viewer
-    src="mano_aliena.glb"
-    camera-controls
-    auto-rotate
-    background-color="#00000000"
-    interaction-prompt="none"
-    disable-zoom
-    alt="Modello 3D della mano aliena"
-    style="width: 100%; height: 100vh;">
-    <p class="error">Errore nel caricamento del modello 3D. Assicurati che il file "mano_aliena.glb" sia nella cartella giusta.</p>
-  </model-viewer>
+  <div id="canvas-container"></div>
 
+  <!-- three.js core + GLTFLoader -->
+  <script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+
+  <script>
+    // 1) Setup scena, camera e renderer
+    const container = document.getElementById('canvas-container');
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(55, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 1.5, 3);
+
+    const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+    container.appendChild(renderer.domElement);
+
+    // 2) Aggiungi luce
+    const ambient = new THREE.AmbientLight(0xffffff, 0.6);
+    scene.add(ambient);
+    const dirLight = new THREE.DirectionalLight(0xffffff, 0.6);
+    dirLight.position.set(5,10,7.5);
+    scene.add(dirLight);
+
+    // 3) Carica il modello GLB
+    const loader = new THREE.GLTFLoader();
+    loader.load(
+      'mano_aliena.glb',
+      gltf => {
+        const model = gltf.scene;
+        model.scale.set(0.8,0.8,0.8);
+        model.position.set(0, -0.5, 0);
+        scene.add(model);
+
+        // animazione di rotazione
+        function animate() {
+          requestAnimationFrame(animate);
+          model.rotation.y += 0.005;
+          renderer.render(scene, camera);
+        }
+        animate();
+      },
+      undefined,
+      err => {
+        console.error('Errore nel caricamento del modello 3D:', err);
+      }
+    );
+
+    // 4) Gestione resize
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth/window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
 </body>
 </html>
