--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio di KanekiGhoul‑dev</title>
 
   <!-- Font Orbitron -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 
   <style>
-    /* Generale */
+    /* Sfondo e testo generale */
     body, html {
       margin: 0; padding: 0;
       width: 100%; height: 100%;
@@ -19,7 +19,7 @@
       background-size: cover;
       color: #00aaff;
     }
-    /* Contenitore per eventuale testo sopra il 3D */
+    /* Intro testuale */
     .intro {
       position: absolute; top: 10%; left: 50%;
       transform: translateX(-50%);
@@ -28,11 +28,10 @@
     .intro h1 { margin:0; font-size:2.5rem; text-shadow:0 0 10px #000; }
     .intro p { margin:0.5rem 0 0; color:#a0c4ff; }
 
-    /* Il canvas di three.js occuperà tutto il viewport */
+    /* Container per three.js */
     #canvas-container {
-      width:100%; height:100%;
-      position: absolute; top:0; left:0;
-      z-index: 0;
+      position: absolute; top: 0; left: 0;
+      width: 100%; height: 100%; z-index: 0;
     }
   </style>
 </head>
@@ -45,54 +44,56 @@
 
   <div id="canvas-container"></div>
 
-  <!-- three.js core + GLTFLoader -->
-  <script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+  <!-- Three.js e GLTFLoader -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 
   <script>
-    // 1) Setup scena, camera e renderer
+    // 1. Setup scena, camera e renderer
     const container = document.getElementById('canvas-container');
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(55, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1.5, 3);
+    camera.position.set(0, 1, 3);
 
     const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.setPixelRatio(window.devicePixelRatio);
     container.appendChild(renderer.domElement);
 
-    // 2) Aggiungi luce
+    // 2. Luci
     const ambient = new THREE.AmbientLight(0xffffff, 0.6);
     scene.add(ambient);
     const dirLight = new THREE.DirectionalLight(0xffffff, 0.6);
-    dirLight.position.set(5,10,7.5);
+    dirLight.position.set(5, 10, 7.5);
     scene.add(dirLight);
 
-    // 3) Carica il modello GLB
+    // 3. Caricamento modello
     const loader = new THREE.GLTFLoader();
     loader.load(
       'mano_aliena.glb',
       gltf => {
         const model = gltf.scene;
-        model.scale.set(0.8,0.8,0.8);
+        model.scale.set(0.7, 0.7, 0.7);
         model.position.set(0, -0.5, 0);
         scene.add(model);
 
-        // animazione di rotazione
-        function animate() {
+        // Animazione rotazione
+        (function animate() {
           requestAnimationFrame(animate);
           model.rotation.y += 0.005;
           renderer.render(scene, camera);
-        }
-        animate();
+        })();
       },
-      undefined,
-      err => {
-        console.error('Errore nel caricamento del modello 3D:', err);
+      xhr => {
+        // opzionale: log del progresso
+        console.log(`Modello caricato: ${(xhr.loaded/xhr.total*100).toFixed(1)}%`);
+      },
+      error => {
+        console.error('Errore nel caricamento del modello 3D:', error);
       }
     );
 
-    // 4) Gestione resize
+    // 4. Resize
     window.addEventListener('resize', () => {
       camera.aspect = window.innerWidth/window.innerHeight;
       camera.updateProjectionMatrix();
