--- a/index.html
+++ b/index.html
@@ -1,113 +1,82 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio di KanekiGhoul‑dev</title>
-
-  <!-- Font tecnico -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio 3D</title>
   <style>
-    /* Corpo e sfondo */
-    html, body {
-      margin: 0; padding: 0;
-      width: 100%; height: 100%;
+    body {
+      margin: 0;
       overflow: hidden;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Arial', sans-serif;
       background: url('sfondoportfolio.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: #00aaff;
     }
 
-    /* Testo introduttivo */
-    .intro {
+    h1 {
       position: absolute;
       top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
+      width: 100%;
       text-align: center;
+      font-size: 3.5rem; /* aumentato */
+      color: #3399ff; /* blu acceso */
+      text-shadow: 0 0 20px #3399ff;
       z-index: 1;
     }
-    .intro h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      text-shadow: 0 0 10px #000;
-    }
-    .intro p {
-      margin: 0.5rem 0 0;
-      color: #a0c4ff;
-    }
 
-    /* Container per il canvas 3D */
     #canvas-container {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       z-index: 0;
     }
   </style>
 </head>
 <body>
-
-  <div class="intro">
-    <h1>Benvenuto nel mio universo</h1>
-    <p>Presto qui troverai i miei progetti</p>
-  </div>
-
+  <h1>Benvenuto nel mio universo!<br>Presto troverai qui i miei progetti.</h1>
   <div id="canvas-container"></div>
 
-  <!-- three.js e GLTFLoader -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-
+  <!-- Importa Three.js e GLTFLoader -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
   <script>
-    // 1) Setup scena, camera, renderer
-    const container = document.getElementById('canvas-container');
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(55, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1, 3);
-
+    const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
     const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
-    container.appendChild(renderer.domElement);
+    document.getElementById('canvas-container').appendChild(renderer.domElement);
 
-    // 2) Luci
-    const ambient = new THREE.AmbientLight(0xffffff, 0.6);
-    scene.add(ambient);
-    const dirLight = new THREE.DirectionalLight(0xffffff, 0.6);
-    dirLight.position.set(5, 10, 7.5);
-    scene.add(dirLight);
+    const light = new THREE.DirectionalLight(0xffffff, 2);
+    light.position.set(2, 2, 5);
+    scene.add(light);
 
-    // 3) Caricamento modello (stesso folder: percorso relativo)
+    const ambientLight = new THREE.AmbientLight(0x404040, 2); 
+    scene.add(ambientLight);
+
     const loader = new THREE.GLTFLoader();
-    loader.load(
-      'mano_aliena.glb',        // IL PERCORSO RELATIVO
-      gltf => {
-        const model = gltf.scene;
-        model.scale.set(0.7, 0.7, 0.7);
-        model.position.set(0, -0.5, 0);
-        scene.add(model);
+    loader.load('mano_aliena.glb', function (gltf) {
+      const model = gltf.scene;
+      model.scale.set(2, 2, 2);
+      model.position.set(0, 0, 0);
+      scene.add(model);
 
-        // animazione rotazione
-        (function animate() {
-          requestAnimationFrame(animate);
-          model.rotation.y += 0.005;
-          renderer.render(scene, camera);
-        })();
-      },
-      xhr => {
-        console.log(`Caricamento modello: ${(xhr.loaded/xhr.total*100).toFixed(1)}%`);
-      },
-      err => {
-        console.error('Errore nel caricamento del modello 3D:', err);
+      // Animazione di rotazione
+      function animate() {
+        requestAnimationFrame(animate);
+        model.rotation.y += 0.005;
+        renderer.render(scene, camera);
       }
-    );
+      animate();
+    }, undefined, function (error) {
+      console.error('Errore nel caricamento del modello:', error);
+    });
 
-    // 4) Gestione resize finestra
+    camera.position.z = 5;
+
     window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth/window.innerHeight;
+      camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
