--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     const loader = new THREE.GLTFLoader();
     loader.load('mano_aliena.glb', function (gltf) {
+       console.log(gltf.scene);
       const model = gltf.scene;
       model.scale.set(2, 2, 2);
       scene.add(model);
