--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Il Mio Universo</title>
-  <!-- Google Font Orbitron -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+
+  <!-- Font Orbitron -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -14,18 +16,22 @@
       background: url('sfondoportfolio.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Orbitron', sans-serif;
-      color: #66ccff; /* blu acceso */
-      font-size: 3rem;
+      color: #66ccff;
     }
 
     .overlay {
       position: absolute;
-      top: 5%;
+      top: 10%;
       left: 50%;
       transform: translateX(-50%);
-      z-index: 10;
       text-align: center;
-      text-shadow: 2px 2px 8px #000000;
+      z-index: 10;
+      text-shadow: 2px 2px 10px black;
+    }
+
+    h1, p {
+      font-size: 3rem;
+      margin: 0.5rem 0;
     }
 
     canvas {
@@ -39,47 +45,70 @@
     <p>Presto troverai qui i miei progetti</p>
   </div>
 
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
-    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/loaders/GLTFLoader.js';
+  <!-- Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
 
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.z = 5;
+  <script>
+    let scene, camera, renderer, model;
+    let mouseX = 0, mouseY = 0;
 
-    const renderer = new THREE.WebGLRenderer({ alpha: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+    init();
+    animate();
 
-    const light = new THREE.DirectionalLight(0xffffff, 2);
-    light.position.set(5, 5, 5);
-    scene.add(light);
+    function init() {
+      scene = new THREE.Scene();
 
-    const loader = new GLTFLoader();
-    loader.load('mano_aliena.glb', function (gltf) {
-      console.log(gltf.scene); // Debug: Verifica se il modello viene caricato
+      camera = new THREE.PerspectiveCamera(
+        50,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
+      camera.position.z = 5;
 
-      const model = gltf.scene;
-      model.scale.set(2, 2, 2);
-      model.position.set(0, 0, 0); // Assicura la visibilità del modello
-      scene.add(model);
-
-      const animate = function () {
-        requestAnimationFrame(animate);
-        model.rotation.y += 0.01;
-        renderer.render(scene, camera);
-      };
-
-      animate();
-    }, undefined, function (error) {
-      console.error('Errore nel caricamento del modello:', error);
-    });
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
+      renderer = new THREE.WebGLRenderer({ alpha: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
-    });
+      document.body.appendChild(renderer.domElement);
+
+      const light = new THREE.DirectionalLight(0xffffff, 2);
+      light.position.set(5, 5, 5);
+      scene.add(light);
+
+      const ambientLight = new THREE.AmbientLight(0x404040, 1.5);
+      scene.add(ambientLight);
+
+      // Caricamento modello
+      const loader = new THREE.GLTFLoader();
+      loader.load('mano_aliena.glb', function (gltf) {
+        model = gltf.scene;
+        model.scale.set(2, 2, 2);
+        scene.add(model);
+      });
+
+      // Movimento sfondo in base al mouse
+      document.addEventListener('mousemove', (event) => {
+        mouseX = (event.clientX / window.innerWidth) - 0.5;
+        mouseY = (event.clientY / window.innerHeight) - 0.5;
+        document.body.style.backgroundPosition = `${50 + mouseX * 20}% ${50 + mouseY * 20}%`;
+      });
+
+      window.addEventListener('resize', () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
+    }
+
+    function animate() {
+      requestAnimationFrame(animate);
+
+      if (model) {
+        model.rotation.y += 0.01;
+      }
+
+      renderer.render(scene, camera);
+    }
   </script>
 </body>
 </html>
