--- a/index.html
+++ b/index.html
@@ -3,112 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Il Mio Universo</title>
-
-  <!-- Font Orbitron -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-
+  <title>Portfolio 3D</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       overflow: hidden;
-      background: url('sfondoportfolio.jpg') no-repeat center center fixed;
-      background-size: cover;
       font-family: 'Orbitron', sans-serif;
-      color: #66ccff;
+      color: #61b0ff;
+      font-size: 2rem;
+      background-color: black;
     }
 
-    .overlay {
+    #overlay {
       position: absolute;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
+      top: 20px;
+      left: 20px;
       z-index: 10;
-      text-shadow: 2px 2px 10px black;
-    }
-
-    h1, p {
-      font-size: 3rem;
-      margin: 0.5rem 0;
     }
 
     canvas {
       display: block;
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="overlay">
-    <h1>Benvenuto nel mio universo</h1>
-    <p>Presto troverai qui i miei progetti</p>
-  </div>
+  <div id="overlay">Benvenuto nel mio universo. Presto troverai qui i miei progetti.</div>
 
-  <!-- Three.js -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
+  <script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
+    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/controls/OrbitControls.js';
 
-  <script>
-    let scene, camera, renderer, model;
-    let mouseX = 0, mouseY = 0;
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
-    init();
-    animate();
+    // Stelle
+    const starGeometry = new THREE.BufferGeometry();
+    const starCount = 10000;
+    const starVertices = [];
 
-    function init() {
-      scene = new THREE.Scene();
-
-      camera = new THREE.PerspectiveCamera(
-        50,
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1000
-      );
-      camera.position.z = 5;
-
-      renderer = new THREE.WebGLRenderer({ alpha: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
-
-      const light = new THREE.DirectionalLight(0xffffff, 2);
-      light.position.set(5, 5, 5);
-      scene.add(light);
-
-      const ambientLight = new THREE.AmbientLight(0x404040, 1.5);
-      scene.add(ambientLight);
-
-      // Caricamento modello
-      const loader = new THREE.GLTFLoader();
-      loader.load('mano_aliena.glb', function (gltf) {
-        model = gltf.scene;
-        model.scale.set(2, 2, 2);
-        scene.add(model);
-      });
-
-      // Movimento sfondo in base al mouse
-      document.addEventListener('mousemove', (event) => {
-        mouseX = (event.clientX / window.innerWidth) - 0.5;
-        mouseY = (event.clientY / window.innerHeight) - 0.5;
-        document.body.style.backgroundPosition = `${50 + mouseX * 20}% ${50 + mouseY * 20}%`;
-      });
-
-      window.addEventListener('resize', () => {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      });
+    for (let i = 0; i < starCount; i++) {
+      starVertices.push((Math.random() - 0.5) * 2000);
+      starVertices.push((Math.random() - 0.5) * 2000);
+      starVertices.push((Math.random() - 0.5) * 2000);
     }
+
+    starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
+    const starMaterial = new THREE.PointsMaterial({ color: 0x61b0ff });
+    const starField = new THREE.Points(starGeometry, starMaterial);
+    scene.add(starField);
+
+    camera.position.z = 5;
+
+    const controls = new OrbitControls(camera, renderer.domElement);
 
     function animate() {
       requestAnimationFrame(animate);
-
-      if (model) {
-        model.rotation.y += 0.01;
-      }
-
+      starField.rotation.y += 0.0005;
+      starField.rotation.x += 0.0002;
       renderer.render(scene, camera);
     }
+
+    animate();
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
   </script>
 </body>
 </html>
