--- a/index.html
+++ b/index.html
@@ -30,50 +30,55 @@
 <body>
   <div id="overlay">Benvenuto nel mio universo. Presto troverai qui i miei progetti.</div>
 
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
-    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/controls/OrbitControls.js';
+<script type="module">
+  import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
+  import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/controls/OrbitControls.js';
 
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+  const renderer = new THREE.WebGLRenderer({ antialias: true });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
+
+  // Aggiungo luce debole ambientale (opzionale ma utile)
+  const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+  scene.add(ambientLight);
+
+  // Stelle
+  const starGeometry = new THREE.BufferGeometry();
+  const starCount = 2000; // meno stelle, ma più concentrate
+  const starVertices = [];
+
+  for (let i = 0; i < starCount; i++) {
+    starVertices.push((Math.random() - 0.5) * 100); // più vicino
+    starVertices.push((Math.random() - 0.5) * 100);
+    starVertices.push((Math.random() - 0.5) * 100);
+  }
+
+  starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
+  const starMaterial = new THREE.PointsMaterial({ color: 0x61b0ff, size: 0.5 }); // dimensione visibile
+  const starField = new THREE.Points(starGeometry, starMaterial);
+  scene.add(starField);
+
+  camera.position.z = 30;
+
+  const controls = new OrbitControls(camera, renderer.domElement);
+
+  function animate() {
+    requestAnimationFrame(animate);
+    starField.rotation.y += 0.0005;
+    starField.rotation.x += 0.0002;
+    renderer.render(scene, camera);
+  }
+
+  animate();
+
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
     renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+  });
+</script>
 
-    // Stelle
-    const starGeometry = new THREE.BufferGeometry();
-    const starCount = 10000;
-    const starVertices = [];
-
-    for (let i = 0; i < starCount; i++) {
-      starVertices.push((Math.random() - 0.5) * 2000);
-      starVertices.push((Math.random() - 0.5) * 2000);
-      starVertices.push((Math.random() - 0.5) * 2000);
-    }
-
-    starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
-    const starMaterial = new THREE.PointsMaterial({ color: 0x61b0ff });
-    const starField = new THREE.Points(starGeometry, starMaterial);
-    scene.add(starField);
-
-    camera.position.z = 5;
-
-    const controls = new OrbitControls(camera, renderer.domElement);
-
-    function animate() {
-      requestAnimationFrame(animate);
-      starField.rotation.y += 0.0005;
-      starField.rotation.x += 0.0002;
-      renderer.render(scene, camera);
-    }
-
-    animate();
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-  </script>
 </body>
 </html>
