--- a/index.html
+++ b/index.html
@@ -115,10 +115,17 @@
     <p>Sono un Visual Designer e 3D Artist appassionato di temi spaziali e futuristici. Amo esplorare nuovi modi di comunicare attraverso il design.</p>
   </section>
 
-  <section id="competenze" class="section">
-    <h2>Competenze</h2>
-    <p>Modellazione 3D, Logo Design, Animazione, UI/UX Futuristica, Scripting Three.js.</p>
-  </section>
+<section id="competenze" class="section">
+  <h2>Competenze</h2>
+  <p>
+    Sono un appassionato di modellazione e animazione 3D, un interesse che coltivo da autodidatta sperimentando con software come Blender e approfondendo giorno dopo giorno.  
+    <br><br>
+    Negli ultimi tempi mi sto avvicinando anche al mondo dell’intelligenza artificiale, esplorando come possa integrarsi nei processi creativi per dare vita a progetti originali e innovativi.  
+    <br><br>
+    Amo imparare, mettermi alla prova e cercare sempre nuove ispirazioni che uniscano arte e tecnologia.
+  </p>
+</section>
+
 
   <section id="contatti" class="section">
     <h2>Contatti</h2>
